--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
   .f{
-      padding-buttom:20px;
+      padding-bottom:20px;
       height:70px;
   }      
         
-        
-    </style>
-    <style type="text/css">
     button {
       border: none;
       background: #0076ff;
