--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
    <span><center><img src="cake1.jpg"width="300px" height="300px"><br><br><img src="cake2.jpg"width="300px"height="300px"><br><br><img src="cake3.jpg"width="300px"height="300px"></center>
    <br>
    <center><p><b>Complete your order</b></p></center></span>
-   <center><form><input type="Email address" placeholder="enter email address"><br><br><input type="delivery address" placeholder="enter delivery address"</form></center><br><br>
+   <center>
+    <form action="https://formsubmit.co/samueloluwabiyi68@gmail.com" method="POST">
+      <input type="Email address" placeholder="enter email address">
+      <br>
+      <br>
+      <input type="delivery address" placeholder="enter delivery address">
+    </form>
+  </center>
+  <br>
+  <br>
    <center><button type="submit">submit request</button></center>
 </body>
 <footer style="background-color:violet"height ="500px"><center><a href="about.html"><h3>About us</h3></a>
