--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
       <br>
       <br>
       <input type="delivery address" placeholder="enter delivery address">
-    </form>
+  
   </center>
   <br>
   <br>
-   <center><button type="submit">submit request</button></center>
+   <center><button type="submit">ORDER NOW</button></center>
+    </form>
 </body>
 <footer style="background-color:violet"height ="500px"><center><a href="about.html"><h3>About us</h3></a>
     <a href="contact.html"><h3>contact us</h3></a><a href="privacy.html"><h3>privacy policy</h3></a>©️ 2023<h2>whatsapp number:08053467687</h2></center></footer>
